# Projects

./: .gitignore  .mailmap  CLAUDE.md  README.md
Large-Scale-Optimization/: LogisticRegressRedone.ipynb  LogisticRegressionSVRG.ipynb  README.md  Subgradient.ipynb
NanoGPT/nanoGPT/config/: finetune_shakespeare.py
NanoGPT/nanoGPT_lecture/: gpt-dev.ipynb
autoresearch/: README.md
build-nanogpt/: anurag_torch_run.err  anurag_torch_run.out  anurag_torch_run_large.err  checkpoint.pth  model_checkpoint.pt  optimizer_checkpoint.pt  pyproject.toml  submit_job.sh
build-nanogpt/build_nanogpt/: fineweb.py  hellaswag.py  play.ipynb  train_gpt2.py
build-sparse-autoencoder/build_sparse_autoencoder/: play.ipynb  train.py
learn-rl/: pyproject.toml
